--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Java_Project_Hotel_Uni.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=C:\\Users\\kom6i\\Downloads\\jdatechooser\\DateChooser.jar
 file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\kom6i\\OneDrive\\\u0420\u0430\u0431\u043e\u0442\u0435\u043d \u043f\u043b\u043e\u0442\\Movies\\SoftWare\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.48.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
