--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/Java_Project_Hotel_Uni.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=C:\\Users\\kom6i\\Downloads\\jdatechooser\\DateChooser.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\learn\\Desktop\\programming\\jCalendar\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\kom6i\\OneDrive\\\u0420\u0430\u0431\u043e\u0442\u0435\u043d \u043f\u043b\u043e\u0442\\Movies\\SoftWare\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\learn\\Desktop\\programming\\Jar files\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
